# bubbling-editor

./: README.md  main.py  pyproject.toml  requirements.txt
assets/: shutterstock.bubbling
bubbling_editor/: bubbling_editor_bubble_on_image.py  bubbling_editor_image.py  bus.py  editor.py  gui.py  helpers.py  misc.py  statechart.py
tests/: test_bus.py  test_helpers.py  test_statechart.py
tests/assets/: project.bubbling
