[project]
name="bubbling-editor"
description='Simple Tkinter image bubbling editor'
version="0.0.1"
authors=[
    { name="vkalyvayut-roboty-a-ne-chelovek"}
]
dependencies=[
    "miros~=4.2.1",
    "pillow~=10.4.0"
]
requires-python=">= 3.10"
readme="README.MD"
keywords=["tkinter", "bubbling", "image-editor"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent"
]

[project.scripts]
bubbling-editor="bubbling_editor.editor:run"

[project.urls]
Homepage="https://github.com/vkalyvayut-roboty-a-ne-chelovek/bubbling-editor"
Issues="https://github.com/vkalyvayut-roboty-a-ne-chelovek/bubbling-editor/issues"

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"